...
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvChat" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />

    

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="12dp" android:orientation="horizontal">

        <EditText android:id="@+id/etMessage" android:layout_width="0dp" android:layout_height="56dp" android:layout_weight="1" android:hint="@string/txt_fragment_chat_99" />

        <ImageButton android:id="@+id/btnSend" android:layout_width="56dp" android:layout_height="56dp" android:layout_marginStart="8dp" android:backgroundTint="#386458" android:src="@android:drawable/ic_menu_send" android:contentDescription="@string/cd_send" />

    </LinearLayout>

</LinearLayout>
