...

                <ImageView android:id="@+id/ivPreviewPhoto" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop" android:contentDescription="@null" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        
        <com.google.android.material.button.MaterialButton android:id="@+id/btnUploadNewPhoto" android:layout_width="match_parent" android:layout_height="52dp" android:layout_marginTop="20dp" android:text="@string/txt_dialog_medication_preview_67" android:textAllCaps="false" android:textSize="15sp" android:textStyle="bold" app:cornerRadius="16dp" app:backgroundTint="@color/caremate_primary" app:ic

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
