<?xml version='1.0' encoding='utf-8'?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#F8FAF8">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="24dp" android:layout_gravity="center" android:gravity="center">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_fragment_login_172" android:textSize="32sp" android:textStyle="bold" android:textColor="#191C1B" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_fragment_login_173" android:textColor="#404845" android:layout_marginTop="4dp" android:layout_marginBottom="32dp" />

        <EditText android:id="@+id/etEmail" android:layout_width="match_parent" android:layout_height="56dp" android:hint="@string/txt_dialog_reconnect_family_69" android:inputType="textEmailAddress" />

        <EditText android:id="@+id/etPassword" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginTop="16dp" android:hint="@string/txt_fragment_login_174" android:inputType="textPassword" />

        <Button android:id="@+id/btnLogin" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginTop="24dp" android:text="@string/txt_fragment_login_175" android:textColor="@android:color/white" android:backgroundTint="#386458" />

        <TextView android:id="@+id/tvRegister" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_fragment_login_176" android:textColor="#386458" android:layout_marginTop="24dp" />

    </LinearLayout>

</ScrollView>